Added JPM coding challenge

--- a/resume.tex
+++ b/resume.tex
@@ -53,6 +53,7 @@ Entailed responsibility for ensuring 501(c)(3) corporation complied with by-laws
 
 \section{SELECTED AWARDS AND RECOGNITIONS}
 \begin{tabular}{@{}l l}
+April 2013 & \textit{J.P. Morgan Spring Week in Technology Coding Challenge 3\ts{rd} Place}\linebreak \\[5pt]
 February 2013 & \textit{\href{http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Best for Community''}\linebreak\\[1pt] 
 &\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
 April 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
