--- a/resume.tex
+++ b/resume.tex
@@ -39,6 +39,8 @@ Graduated Valedictorian
 \end{itemize}
 
 \section{PROFESSIONAL EXPERIENCE}
+\textit{Intern, Data Acquisition at Skyscanner, Ltd. (Edinburgh, UK)} \hfill May 2013-Present \\
+Duties include writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff.\\[5pt]
 \textit{Q.A. Engineer Internship at CashStar, Inc. (Portland, ME, USA)} \hfill Summer 2011 \\
 Duties included ensuring client specification adherence, developing data management and entry system.\\[5pt]
 \textit{Intern at Law Offices of Nichols, Webb \& Loranger (Saco, ME, USA)} \hfill 2007-2011 \\
@@ -62,9 +64,6 @@ Spring 2010 & \textit{National Merit Scholar Finalist (highest rank)} \\[5pt]
 Spring 2010 & \textit{Valedictorian of The New School Class of 2010} \\[5pt]
 Spring 2010 & \textit{The New School Teacher of the Year} \\[5pt]
 2007 - 2010 & \textit{The New School Extraordinary Service Award} \\[5pt]
-2007, 2008 & \textit{The New School Outstanding Young Leader Award} \\[5pt]
-2005 - 2007 & \textit{2\ts{nd} place SAT-1 Critical Reading Score, State of Maine} \\[5pt]
-Spring 2007 & \textit{National Latin Exam Certificate of Merit Magna Cum Laude}
 \end{tabular}
 \end{resume}
 \end{document}
