Updated Skyscanner internship information

--- a/resume.tex
+++ b/resume.tex
@@ -20,8 +20,7 @@
 \section{EDUCATION}
 \textbf{University of Edinburgh}, Edinburgh, UK \hfill 2011-Present\\
 Master of Arts Honors Cognitive Science \\
-Expected to graduate May 2015 \\
-GPA: 3.9 / 4.0 (Equivalent) \\[5pt]
+Expected to graduate May 2015 \\[5pt]
 \textbf{University of Southern Maine}, Portland, ME, USA \hfill 2009-2011\\
 Non-degree candidate\\[5pt]
 \textbf{The New School}, Kennebunk, ME, USA \hfill 2007-2010\\
@@ -39,8 +38,8 @@ Graduated Valedictorian
 \end{itemize}
 
 \section{PROFESSIONAL EXPERIENCE}
-\textit{Intern, Data Acquisition at Skyscanner, Ltd. (Edinburgh, UK)} \hfill May 2013-Present \\
-Duties include writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff.\\[5pt]
+\textit{Intern, Data Acquisition at Skyscanner, Ltd. (Edinburgh, UK)} \hfill May 2013-Aug 2013 \\
+Duties include writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties.\\[5pt]
 \textit{Q.A. Engineer Internship at CashStar, Inc. (Portland, ME, USA)} \hfill Summer 2011 \\
 Duties included ensuring client specification adherence, developing data management and entry system.\\[5pt]
 \textit{Intern at Law Offices of Nichols, Webb \& Loranger (Saco, ME, USA)} \hfill 2007-2011 \\
