--- a/resume.tex
+++ b/resume.tex
@@ -39,7 +39,7 @@ Graduated Valedictorian
 
 \section{PROFESSIONAL EXPERIENCE}
 \textit{Intern, Data Acquisition at Skyscanner, Ltd. (Edinburgh, UK)} \hfill May 2013-Aug 2013 \\
-Duties include writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties.\\[5pt]
+Duties included writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties.\\[5pt]
 \textit{Q.A. Engineer Internship at CashStar, Inc. (Portland, ME, USA)} \hfill Summer 2011 \\
 Duties included ensuring client specification adherence, developing data management and entry system.\\[5pt]
 \textit{Intern at Law Offices of Nichols, Webb \& Loranger (Saco, ME, USA)} \hfill 2007-2011 \\
