Added new employment, removed older information, reorganzied some sections

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 \name{H. Chase Stevens}
-\address{24 Lutton Place\\ Edinburgh, Scotland EH8 9PE | 001 44 7719 663016 | chase@chasestevens.com}
+\address{24 Lutton Place, Edinburgh, Scotland EH8 9PE | 001 44 7719 663016 | chase@chasestevens.com}
 
 \begin{resume}
 \section{EDUCATION}
@@ -29,40 +29,39 @@ Graduated Valedictorian
 
 \section{TECHNICAL SKILLS}
 \begin{itemize}[leftmargin=10pt]
-\item Python (6 years of experience)
-\item PHP and MySQL (3 years of experience)
-\item Java (2 years of experience)
-\item \CS \,(2 years of experience)
-\item HTML/CSS
-\item Unix/Bash
+\item Programming Languages: Python, PHP, Java, \CS, Javascript
+\item Markup: HTML4/5, CSS3
+\item Data: MySQL, Microsoft SQL Server
+\item IDEs: Visual Studio, Eclipse
+\item VCSs: Git, SVN
 \end{itemize}
 
-\section{PROFESSIONAL EXPERIENCE}
-\textit{Intern, Data Acquisition at Skyscanner, Ltd. (Edinburgh, UK)} \hfill May 2013-Aug 2013 \\
-Duties included writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties.\\[5pt]
-\textit{Q.A. Engineer Internship at CashStar, Inc. (Portland, ME, USA)} \hfill Summer 2011 \\
-Duties included ensuring client specification adherence, developing data management and entry system.\\[5pt]
-\textit{Intern at Law Offices of Nichols, Webb \& Loranger (Saco, ME, USA)} \hfill 2007-2011 \\
-Duties included analysis and summary of legal documents, discovery, and scientific publications, as well as web development and various information technology tasks. 
+\section{POSITIONS HELD}
+\textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present \\
+Duties include creation and maintenance of web scrapers 
+as part of Data Acquisition and Reporting team, prototyping and implementation of experimental projects as part of Research and Development division. Edinburgh, UK.\\[5pt]
+\textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - Aug 2013 \\
+Duties included writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties. Edinburgh, UK.\\[5pt]
+\textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill Summer 2011 \\
+Duties included ensuring client specification adherence, developing data management and entry system. Portland, ME, USA.\\[5pt]
+\textit{Intern at Law Offices of Nichols, Webb \& Loranger} \hfill 2007 - 2011 \\
+Duties included analysis and summary of legal documents, discovery, and scientific publications, as well as web development and various information technology tasks. Saco, ME, USA.
 
 \section{VOLUNTEER EXPERIENCE}
-\textit{Web Design and Development for Chase-Jellison Homestead} \hfill 2012-Present \\Duties include ongoing design and development of desktop and mobile websites, as well as database management. \\[5pt]
-\textit{Member of The New School Leadership Team} \hfill 2008-2011 \\
-Entailed drafting and presentation of school policies and budgetary proposals, as well as participation in fundraising events. \\[5pt]
-\textit{Member of Board of Directors of The New School Corporation} \hfill 2009-2011 \\
+\textit{Web Design and Development for Chase-Jellison Homestead} \hfill 2012 - Present \\Duties include ongoing design and development of desktop and mobile websites, as well as database management. \\[5pt]
+\textit{Member of Board of Directors of The New School Corporation} \hfill 2009 - 2011 \\
 Entailed responsibility for ensuring 501(c)(3) corporation complied with by-laws and mission statement. Duties included analysis and ratification of policies for The New School (Kennebunk, ME, USA) as well as approval of budgetary proposals for same. 
 
-\section{SELECTED AWARDS AND RECOGNITIONS}
+\section{SELECTED HONORS AND AWARDS}
 \begin{tabular}{@{}l l}
-April 2013 & \textit{J.P. Morgan Spring Week in Technology Coding Challenge 3\ts{rd} Place}\linebreak \\[5pt]
+May 2013 & \textit{J.P. Morgan Spring Week in Technology Coding Challenge 3\ts{rd} Place}\linebreak \\[5pt]
 February 2013 & \textit{\href{http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Community App Award''}\linebreak\\[1pt] 
 &\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
-April 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
+May 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
  &\textit{\href{http://www.chasestevens.com/team2civ/}{StratLoc}} \linebreak \\[5pt]
 Spring 2010 & \textit{National Merit Scholar Finalist (highest rank)} \\[5pt]
 Spring 2010 & \textit{Valedictorian of The New School Class of 2010} \\[5pt]
 Spring 2010 & \textit{The New School Teacher of the Year} \\[5pt]
-2007 - 2010 & \textit{The New School Extraordinary Service Award} \\[5pt]
 \end{tabular}
 \end{resume}
 \end{document}
