--- a/resume.tex
+++ b/resume.tex
@@ -38,8 +38,7 @@ Graduated Valedictorian
 
 \section{POSITIONS HELD}
 \textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present \\
-Duties include creation and maintenance of web scrapers 
-as part of Data Acquisition and Reporting team, prototyping and implementation of experimental projects as part of Research and Development division. Edinburgh, UK.\\[5pt]
+Duties include creation and maintenance of web scrapers as part of Data Acquisition and Reporting team, prototyping and implementation of experimental projects as part of Research and Development division. Edinburgh, UK.\\[5pt]
 \textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - Aug 2013 \\
 Duties included writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties. Edinburgh, UK.\\[5pt]
 \textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill Summer 2011 \\
@@ -48,7 +47,8 @@ Duties included ensuring client specification adherence, developing data managem
 Duties included analysis and summary of legal documents, discovery, and scientific publications, as well as web development and various information technology tasks. Saco, ME, USA.
 
 \section{VOLUNTEER EXPERIENCE}
-\textit{Web Design and Development for Chase-Jellison Homestead} \hfill 2012 - Present \\Duties include ongoing design and development of desktop and mobile websites, as well as database management. \\[5pt]
+\textit{Web Design and Development for Chase-Jellison Homestead} \hfill 2012 - Present \\
+Duties include ongoing design and development of desktop and mobile websites, as well as database management. \\[5pt]
 \textit{Member of Board of Directors of The New School Corporation} \hfill 2009 - 2011 \\
 Entailed responsibility for ensuring 501(c)(3) corporation complied with by-laws and mission statement. Duties included analysis and ratification of policies for The New School (Kennebunk, ME, USA) as well as approval of budgetary proposals for same. 
 
