--- a/resume.tex
+++ b/resume.tex
@@ -38,11 +38,11 @@ Graduated Valedictorian
 
 \section{POSITIONS HELD}
 \textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present \\
-Duties include creation and maintenance of web scrapers as part of Data Acquisition and Reporting team, prototyping and implementation of experimental projects as part of Research and Development division. Edinburgh, UK.\\[5pt]
-\textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - Aug 2013 \\
+Duties include development and maintenance of web scrapers as part of Data Acquisition and Reporting team, prototyping and implementation of experimental projects as part of Research and Development division. Edinburgh, UK.\\[5pt]
+\textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013 \\
 Duties included writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties. Edinburgh, UK.\\[5pt]
-\textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill Summer 2011 \\
-Duties included ensuring client specification adherence, developing data management and entry system. Portland, ME, USA.\\[5pt]
+\textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill June 2011 - August 2011 \\
+Duties included ensuring client specification adherence, development of data management and entry system. Portland, ME, USA.\\[5pt]
 \textit{Intern at Law Offices of Nichols, Webb \& Loranger} \hfill 2007 - 2011 \\
 Duties included analysis and summary of legal documents, discovery, and scientific publications, as well as web development and various information technology tasks. Saco, ME, USA.
 
