Updated descriptions for roles held

--- a/resume.tex
+++ b/resume.tex
@@ -20,6 +20,7 @@
 \section{EDUCATION}
 \textbf{University of Edinburgh}, Edinburgh, UK \hfill 2011-Present\\
 Master of Arts Honors Cognitive Science \\
+Anticipated degree classification: First-class honours (GPA equivalent: 3.73/4.00)\\
 Expected to graduate May 2015 \\[5pt]
 \textbf{University of Southern Maine}, Portland, ME, USA \hfill 2009-2011\\
 Non-degree candidate\\[5pt]
@@ -27,30 +28,42 @@ Non-degree candidate\\[5pt]
 Senior Project: Taught semester-long course in Python \\
 Graduated Valedictorian
 
-\section{TECHNICAL SKILLS}
+\section{SKILLS}
 \begin{itemize}[leftmargin=10pt]
-\item Programming Languages: Python, PHP, Java, \CS, Javascript
-\item Markup: HTML4/5, CSS3
-\item Data: MySQL, Microsoft SQL Server
-\item IDEs: Visual Studio, Eclipse
+\item Programming Languages: Python, Haskell, Java, Javascript, \CS
+\item Data: XPath, Microsoft SQL Server, MySQL
+\item IDEs: Visual Studio 2012/2013, Eclipse
 \item VCSs: Git, SVN
 \end{itemize}
 
 \section{POSITIONS HELD}
-\textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present \\
-Duties include development and maintenance of web scrapers as part of Data Acquisition and Reporting team, prototyping and implementation of experimental projects as part of Research and Development division. Edinburgh, UK.\\[5pt]
-\textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013 \\
-Duties included writing, maintaining, and ensuring the accuracy of web scrapers, collaborating with technical and non-technical staff, liaising with commercial partners and other 3rd parties. Edinburgh, UK.\\[5pt]
-\textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill June 2011 - August 2011 \\
-Duties included ensuring client specification adherence, development of data management and entry system. Portland, ME, USA.\\[5pt]
-\textit{Intern at Law Offices of Nichols, Webb \& Loranger} \hfill 2007 - 2011 \\
-Duties included analysis and summary of legal documents, discovery, and scientific publications, as well as web development and various information technology tasks. Saco, ME, USA.
+\textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present 
+\begin{itemize}[leftmargin=10pt]
+\item Leveraged NLP and Machine Learning techniques to deliver browser-based, point-and-click tool for automatic web scraper generation
+\item Delivered and assisted in implementing roadmap for Selenium WebDriver-based web scraper framework, as part of Price Accuracy initiative
+\item Created prototype push-notification system and app for wearable devices, as part of Research and Development division
+\end{itemize}
+\textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013
+\begin{itemize}[leftmargin=10pt]
+\item Developed, maintained, and ensured accuracy of business-critical web scrapers
+\item Collaborated heavily with technical and non-technical staff both inside and outwith the company
+\end{itemize}
+\textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill June 2011 - August 2011
+\begin{itemize}[leftmargin=10pt]
+\item Ensured adherence of consumer-facing products to quality standards
+\item Developed custom CMS to manage client requirements and specifications
+\end{itemize}
+\textit{Intern at Law Offices of Nichols, Webb \& Loranger} \hfill 2007 - 2011
+\begin{itemize}[leftmargin=10pt]
+\item Produced critical analyses of legal documents, discovery, and scientific publications
+\end{itemize}
 
 \section{VOLUNTEER EXPERIENCE}
-\textit{Web Design and Development for Chase-Jellison Homestead} \hfill 2012 - Present \\
-Duties include ongoing design and development of desktop and mobile websites, as well as database management. \\[5pt]
-\textit{Member of Board of Directors of The New School Corporation} \hfill 2009 - 2011 \\
-Entailed responsibility for ensuring 501(c)(3) corporation complied with by-laws and mission statement. Duties included analysis and ratification of policies for The New School (Kennebunk, ME, USA) as well as approval of budgetary proposals for same. 
+\textit{Member of Board of Directors of The New School Corporation} \hfill 2009 - 2011
+\begin{itemize}[leftmargin=10pt]
+\item Ensured 501(c)(3) corporation complied with by-laws and mission statement.
+\item Analyzed and ratified school policies and budgetary proposals for The New School (Kennebunk, ME, USA)
+\end{itemize}
 
 \section{SELECTED HONORS AND AWARDS}
 \begin{tabular}{@{}l l}
@@ -59,7 +72,7 @@ February 2013 & \textit{\href{http://data.inf.ed.ac.uk/ilwhack/finalprojects.php
 &\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
 May 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
  &\textit{\href{http://www.chasestevens.com/team2civ/}{StratLoc}} \linebreak \\[5pt]
-Spring 2010 & \textit{National Merit Scholar Finalist (highest rank)} \\[5pt]
+Spring 2010 & \textit{National Merit Scholar Finalist} \\[5pt]
 Spring 2010 & \textit{Valedictorian of The New School Class of 2010} \\[5pt]
 Spring 2010 & \textit{The New School Teacher of the Year} \\[5pt]
 \end{tabular}
