Update Skyscanner description, phone number

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 \name{H. Chase Stevens}
-\address{24 Lutton Place, Edinburgh, Scotland EH8 9PE | 001 44 7719 663016 | chase@chasestevens.com}
+\address{24 Lutton Place, Edinburgh, Scotland EH8 9PE | +44 771 966 3016 | chase@chasestevens.com}
 
 \begin{resume}
 \section{EDUCATION}
@@ -39,9 +39,9 @@ Graduated Valedictorian
 \section{POSITIONS HELD}
 \textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present 
 \begin{itemize}[leftmargin=10pt]
-\item Leveraged NLP and Machine Learning techniques to deliver browser-based, point-and-click tool for automatic web scraper generation
-\item Delivered and assisted in implementing roadmap for Selenium WebDriver-based web scraper framework, as part of Price Accuracy initiative
-\item Created prototype push-notification system and app for wearable devices, as part of Research and Development division
+\item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
+\item Delivered and assisted in implementing roadmap for Selenium WebDriver-based web scraper framework in Python
+\item Prototyped push-notification system and app for wearable devices, as part of Research and Development division
 \end{itemize}
 \textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013
 \begin{itemize}[leftmargin=10pt]
