--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 \section{EDUCATION}
 \textbf{University of Edinburgh}, Edinburgh, UK \hfill 2011-Present\\
 Master of Arts Honors Cognitive Science \\
-Anticipated degree classification: First-class honours (GPA equivalent: 3.73/4.00)\\
+Anticipated degree classification: First-class honours (GPA equivalent: 3.86/4.00)\\
 Expected to graduate May 2015 \\[5pt]
 \textbf{University of Southern Maine}, Portland, ME, USA \hfill 2009-2011\\
 Non-degree candidate\\[5pt]
@@ -40,7 +40,7 @@ Graduated Valedictorian
 \textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present 
 \begin{itemize}[leftmargin=10pt]
 \item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
-\item Delivered and assisted in implementing roadmap for Selenium WebDriver-based web scraper framework in Python
+\item Delivered and assisted in implementing roadmap for Selenium WebDriver-based browser automation and web scraper framework in Python
 \item Prototyped push-notification system and app for wearable devices, as part of Research and Development division
 \end{itemize}
 \textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013
