Update with dissertation and edinburgh award

--- a/resume.tex
+++ b/resume.tex
@@ -18,29 +18,35 @@
 
 \begin{resume}
 \section{EDUCATION}
-\textbf{University of Edinburgh}, Edinburgh, UK \hfill 2011-Present\\
+%\textbf{University of Edinburgh}, Edinburgh, UK \hfill September 2015 - Present\\
+%Master of Science in Artificial Intelligence \\
+%Specialism in Natural Language Processing \\
+%Expected to graduate August 2016 \\[5pt]
+%\textbf{University of Edinburgh}, Edinburgh, UK \hfill Semptember 2011 - May 2015\\
+\textbf{University of Edinburgh}, Edinburgh, UK \hfill September 2011 - Present\\
 Master of Arts Honors Cognitive Science \\
-Anticipated degree classification: First-class honours (GPA equivalent: 3.86/4.00)\\
-Expected to graduate May 2015 \\[5pt]
-\textbf{University of Southern Maine}, Portland, ME, USA \hfill 2009-2011\\
-Non-degree candidate\\[5pt]
-\textbf{The New School}, Kennebunk, ME, USA \hfill 2007-2010\\
-Senior Project: Taught semester-long course in Python \\
-Graduated Valedictorian
+%Degree classification: First-class honours (GPA equivalent: 3.9/4.0)\\
+Anticipated degree classification: First-class honours (GPA equivalent: 3.9/4.0)\\
+Anticipated graduation date: 31st May 2015\\
+Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
 \section{SKILLS}
 \begin{itemize}[leftmargin=10pt]
-\item Programming Languages: Python, Haskell, Java, Javascript, \CS
+\item Programming Languages: Python, Haskell, Matlab, Java, Javascript, \CS
 \item Data: XPath, Microsoft SQL Server, MySQL
 \item IDEs: Visual Studio 2012/2013, Eclipse
 \item VCSs: Git, SVN
 \end{itemize}
 
 \section{POSITIONS HELD}
-\textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - Present 
+\textit{Software Engineer, Data Acquisition at Skyscanner, Ltd.} \hfill April 2015 - Present
+\begin{itemize}[leftmargin=10pt]
+\item Maintained and developed core web scraping and deep linking frameworks and libraries
+\end{itemize}
+\textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - March 2015 
 \begin{itemize}[leftmargin=10pt]
 \item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
-\item Delivered and assisted in implementing roadmap for Selenium WebDriver-based browser automation and web scraper framework in Python
+\item Spearheaded and co-authored Selenium WebDriver-based browser automation and web scraper framework in Python
 \item Prototyped push-notification system and app for wearable devices, as part of Research and Development division
 \end{itemize}
 \textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013
@@ -53,10 +59,6 @@ Graduated Valedictorian
 \item Ensured adherence of consumer-facing products to quality standards
 \item Developed custom CMS to manage client requirements and specifications
 \end{itemize}
-\textit{Intern at Law Offices of Nichols, Webb \& Loranger} \hfill 2007 - 2011
-\begin{itemize}[leftmargin=10pt]
-\item Produced critical analyses of legal documents, discovery, and scientific publications
-\end{itemize}
 
 \section{VOLUNTEER EXPERIENCE}
 \textit{Member of Board of Directors of The New School Corporation} \hfill 2009 - 2011
@@ -67,14 +69,14 @@ Graduated Valedictorian
 
 \section{SELECTED HONORS AND AWARDS}
 \begin{tabular}{@{}l l}
+April 2015 & \textit{Edinburgh Award} \linebreak \\[5pt]
 May 2013 & \textit{J.P. Morgan Spring Week in Technology Coding Challenge 3\ts{rd} Place}\linebreak \\[5pt]
 February 2013 & \textit{\href{http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Community App Award''}\linebreak\\[1pt] 
 &\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
 May 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
  &\textit{\href{http://www.chasestevens.com/team2civ/}{StratLoc}} \linebreak \\[5pt]
+Spring 2011 & \textit{Class of 2011 Valedictorian, The New School, Kennebunk} \\[5pt]
 Spring 2010 & \textit{National Merit Scholar Finalist} \\[5pt]
-Spring 2010 & \textit{Valedictorian of The New School Class of 2010} \\[5pt]
-Spring 2010 & \textit{The New School Teacher of the Year} \\[5pt]
 \end{tabular}
 \end{resume}
 \end{document}
