Add link for GPA equivalency

--- a/resume.tex
+++ b/resume.tex
@@ -26,7 +26,7 @@
 \textbf{University of Edinburgh}, Edinburgh, UK \hfill September 2011 - Present\\
 Master of Arts Honors Cognitive Science \\
 %Degree classification: First-class honours (GPA equivalent: 3.9/4.0)\\
-Anticipated degree classification: First-class honours (GPA equivalent: 3.9/4.0)\\
+Anticipated degree classification: First-class honours (\href{http://www.ed.ac.uk/schools-departments/humanities-soc-sci/visiting-exchange/academic-support/credits-grading}{GPA equivalent}: 3.92/4.00)\\
 Anticipated graduation date: 31st May 2015\\
 Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
