--- a/resume.tex
+++ b/resume.tex
@@ -18,50 +18,47 @@
 
 \begin{resume}
 \section{EDUCATION}
-%\textbf{University of Edinburgh}, Edinburgh, UK \hfill September 2015 - Present\\
-%Master of Science in Artificial Intelligence \\
+%\textbf{University of Edinburgh}: MSc Artificial Intelligence \hfill 2015 - Present\\
 %Specialism in Natural Language Processing \\
 %Expected to graduate August 2016 \\[5pt]
 %\textbf{University of Edinburgh}, Edinburgh, UK \hfill Semptember 2011 - May 2015\\
-\textbf{University of Edinburgh}, Edinburgh, UK \hfill September 2011 - Present\\
-Master of Arts Honors Cognitive Science \\
-%Degree classification: First-class honours (GPA equivalent: 3.9/4.0)\\
+\textbf{University of Edinburgh}: \textit{MA Hons. Cognitive Science} \hfill 2011 - Present\\
 Anticipated degree classification: First-class honours (\href{http://www.ed.ac.uk/schools-departments/humanities-soc-sci/visiting-exchange/academic-support/credits-grading}{GPA equivalent}: 3.92/4.00)\\
 Anticipated graduation date: 31st May 2015\\
 Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
 \section{SKILLS}
 \begin{itemize}[leftmargin=10pt]
-\item Programming Languages: Python, Haskell, Matlab, Java, Javascript, \CS
+\item Code: Python, Haskell, Matlab, Java, Javascript, \CS
 \item Data: XPath, Microsoft SQL Server, MySQL
 \item IDEs: Visual Studio 2012/2013, Eclipse
 \item VCSs: Git, SVN
 \end{itemize}
 
 \section{POSITIONS HELD}
-\textit{Software Engineer, Data Acquisition at Skyscanner, Ltd.} \hfill April 2015 - Present
+\textit{Software Engineer, Data Acquisition} at \textbf{Skyscanner, Ltd.} \hfill April 2015 - Present
 \begin{itemize}[leftmargin=10pt]
 \item Maintained and developed core web scraping and deep linking frameworks and libraries
 \end{itemize}
-\textit{Undergraduate Software Engineer at Skyscanner, Ltd.} \hfill August 2013 - March 2015 
+\textit{Undergraduate Software Engineer} at \textbf{Skyscanner, Ltd.} \hfill August 2013 - March 2015 
 \begin{itemize}[leftmargin=10pt]
 \item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
 \item Spearheaded and co-authored Selenium WebDriver-based browser automation and web scraper framework in Python
 \item Prototyped push-notification system and app for wearable devices, as part of Research and Development division
 \end{itemize}
-\textit{Intern, Data Acquisition at Skyscanner, Ltd.} \hfill May 2013 - August 2013
+\textit{Intern, Data Acquisition} at \textbf{Skyscanner, Ltd.} \hfill May 2013 - August 2013
 \begin{itemize}[leftmargin=10pt]
 \item Developed, maintained, and ensured accuracy of business-critical web scrapers
 \item Collaborated heavily with technical and non-technical staff both inside and outwith the company
 \end{itemize}
-\textit{Quality Assurance Engineer Intern at CashStar, Inc.} \hfill June 2011 - August 2011
+\textit{Quality Assurance Engineer Intern} at \textbf{CashStar, Inc.} \hfill June 2011 - August 2011
 \begin{itemize}[leftmargin=10pt]
 \item Ensured adherence of consumer-facing products to quality standards
 \item Developed custom CMS to manage client requirements and specifications
 \end{itemize}
 
 \section{VOLUNTEER EXPERIENCE}
-\textit{Member of Board of Directors of The New School Corporation} \hfill 2009 - 2011
+\textit{Member of Board of Directors} of \textbf{The New School Corporation} \hfill 2009 - 2011
 \begin{itemize}[leftmargin=10pt]
 \item Ensured 501(c)(3) corporation complied with by-laws and mission statement.
 \item Analyzed and ratified school policies and budgetary proposals for The New School (Kennebunk, ME, USA)
