Update degree classification and address

--- a/resume.tex
+++ b/resume.tex
@@ -13,18 +13,16 @@
 \addtolength{\textheight}{1in}
 
 \begin{document}
-\name{H. Chase Stevens}
-\address{24 Lutton Place, Edinburgh, Scotland EH8 9PE | +44 771 966 3016 | chase@chasestevens.com}
+\name{H.\,Chase Stevens}
+\address{131/6 Buccleuch Street, Edinburgh, Scotland EH8 9NE | +44 771 966 3016 | chase@chasestevens.com}
 
 \begin{resume}
 \section{EDUCATION}
-%\textbf{University of Edinburgh}: MSc Artificial Intelligence \hfill 2015 - Present\\
+%\textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - Present\\
 %Specialism in Natural Language Processing \\
-%Expected to graduate August 2016 \\[5pt]
-%\textbf{University of Edinburgh}, Edinburgh, UK \hfill Semptember 2011 - May 2015\\
-\textbf{University of Edinburgh}: \textit{MA Hons. Cognitive Science} \hfill 2011 - Present\\
-Anticipated degree classification: First-class honours (\href{http://www.ed.ac.uk/schools-departments/humanities-soc-sci/visiting-exchange/academic-support/credits-grading}{GPA equivalent}: 3.92/4.00)\\
-Anticipated graduation date: 31st May 2015\\
+%Anticipated graduation date: August 2016 \\[5pt]
+\textbf{University of Edinburgh}: \textit{MA Hons.\ Cognitive Science} \hfill 2011 - 2015\\
+First-class honours (\href{http://www.ed.ac.uk/schools-departments/humanities-soc-sci/visiting-exchange/academic-support/credits-grading}{GPA equivalent}: 3.9/4.0)\\
 Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
 \section{SKILLS}
