Add conference poster, consolidate positions held, uncomment MSc

--- a/resume.tex
+++ b/resume.tex
@@ -14,15 +14,15 @@
 
 \begin{document}
 \name{H.\,Chase Stevens}
-\address{131/6 Buccleuch Street, Edinburgh, Scotland EH8 9NE | +44 771 966 3016 | chase@chasestevens.com}
+\address{130/6 Buccleuch Street, Edinburgh, Scotland EH8 9NE | +44 771 966 3016 | chase@chasestevens.com}
 
 \begin{resume}
 \section{EDUCATION}
-%\textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - Present\\
-%Specialism in Natural Language Processing \\
+\textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - Present\\
+Specialism in Natural Language Processing \\[5pt]
 %Anticipated graduation date: August 2016 \\[5pt]
 \textbf{University of Edinburgh}: \textit{MA Hons.\ Cognitive Science} \hfill 2011 - 2015\\
-First-class honours (\href{http://www.ed.ac.uk/schools-departments/humanities-soc-sci/visiting-exchange/academic-support/credits-grading}{GPA equivalent}: 3.9/4.0)\\
+First-class honours (\href{http://www.ed.ac.uk/schools-departments/student-administration/exams/regulations/credit-allocation}{GPA equivalent}: 3.9/4.0)\\
 Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
 \section{SKILLS}
@@ -34,15 +34,12 @@ Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissert
 \end{itemize}
 
 \section{POSITIONS HELD}
-\textit{Software Engineer, Data Acquisition} at \textbf{Skyscanner, Ltd.} \hfill April 2015 - Present
+\textit{Software Engineer} at \textbf{Skyscanner, Ltd.} \hfill August 2013 - Present
 \begin{itemize}[leftmargin=10pt]
 \item Maintained and developed core web scraping and deep linking frameworks and libraries
-\end{itemize}
-\textit{Undergraduate Software Engineer} at \textbf{Skyscanner, Ltd.} \hfill August 2013 - March 2015 
-\begin{itemize}[leftmargin=10pt]
 \item Leveraged NLP and machine learning techniques to deliver browser-based, point-and-click tool for automatic generation of web scrapers
 \item Spearheaded and co-authored Selenium WebDriver-based browser automation and web scraper framework in Python
-\item Prototyped push-notification system and app for wearable devices, as part of Research and Development division
+\item Prototyped push-notification system and app for wearable devices
 \end{itemize}
 \textit{Intern, Data Acquisition} at \textbf{Skyscanner, Ltd.} \hfill May 2013 - August 2013
 \begin{itemize}[leftmargin=10pt]
@@ -55,6 +52,9 @@ Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissert
 \item Developed custom CMS to manage client requirements and specifications
 \end{itemize}
 
+\section{CONFERENCE POSTERS}
+\textbf{2015} (forthcoming). Stevens, H. C. \& Rohde, H. ``Modeling Referential Coordination as a Particle Swarm Optimization Task." The 19th Workshop on the Semantics and Pragmatics of Dialogue. Gothenburg, Sweden.
+
 \section{VOLUNTEER EXPERIENCE}
 \textit{Member of Board of Directors} of \textbf{The New School Corporation} \hfill 2009 - 2011
 \begin{itemize}[leftmargin=10pt]
@@ -65,7 +65,6 @@ Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissert
 \section{SELECTED HONORS AND AWARDS}
 \begin{tabular}{@{}l l}
 April 2015 & \textit{Edinburgh Award} \linebreak \\[5pt]
-May 2013 & \textit{J.P. Morgan Spring Week in Technology Coding Challenge 3\ts{rd} Place}\linebreak \\[5pt]
 February 2013 & \textit{\href{http://data.inf.ed.ac.uk/ilwhack/finalprojects.php}{University of Edinburgh Smart Data Hack} ``Community App Award''}\linebreak\\[1pt] 
 &\textit{for \href{https://github.com/team-tusive/ilwhack}{SaferRoute} (Team Leader)} \linebreak \\[5pt]
 May 2012 & \textit{\href{https://sites.google.com/site/2012oop/winners}{University of Edinburgh INF1-OP} ``Best Project (Experienced)'' for} \linebreak \\[1pt] 
