Change address, amend SemDial date

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 \name{H.\,Chase Stevens}
-\address{130/6 Buccleuch Street, Edinburgh, Scotland EH8 9NE | +44 771 966 3016 | chase@chasestevens.com}
+\address{204/1F2 Dalkeith Road, Edinburgh, Scotland EH16 5DT | +44 771 966 3016 | chase@chasestevens.com}
 
 \begin{resume}
 \section{EDUCATION}
@@ -53,7 +53,7 @@ Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissert
 \end{itemize}
 
 \section{CONFERENCE POSTERS}
-\textbf{2015} (forthcoming). Stevens, H. C. \& Rohde, H. ``Modeling Referential Coordination as a Particle Swarm Optimization Task." The 19th Workshop on the Semantics and Pragmatics of Dialogue. Gothenburg, Sweden.
+\textbf{2015}. Stevens, H. C. \& Rohde, H. ``Modeling Referential Coordination as a Particle Swarm Optimization Task." The 19th Workshop on the Semantics and Pragmatics of Dialogue. Gothenburg, Sweden.
 
 \section{VOLUNTEER EXPERIENCE}
 \textit{Member of Board of Directors} of \textbf{The New School Corporation} \hfill 2009 - 2011
