--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 \name{H.\,Chase Stevens}
-\address{204/1F2 Dalkeith Road, Edinburgh, Scotland EH16 5DT | +44 771 966 3016 | chase@chasestevens.com}
+\address{+44 771 966 3016 | chase@chasestevens.com}
 
 \begin{resume}
 \section{EDUCATION}
