Add link to MSc dissertation

--- a/resume.tex
+++ b/resume.tex
@@ -19,10 +19,11 @@
 \begin{resume}
 \section{EDUCATION}
 \textbf{University of Edinburgh}: \textit{MSc.\ Artificial Intelligence} \hfill 2015 - Present\\
-Specialism in Natural Language Processing \\[5pt]
+Specialism in Natural Language Processing \\
+Dissertation: \textit{\href{http://www.chasestevens.com/papers/msc_dissertation.pdf}{Applying Statistical Language Modeling to Genetic Programming}}\\[5pt]
 %Anticipated graduation date: August 2016 \\[5pt]
 \textbf{University of Edinburgh}: \textit{MA Hons.\ Cognitive Science} \hfill 2011 - 2015\\
-First-class honours (\href{http://www.ed.ac.uk/schools-departments/student-administration/exams/regulations/credit-allocation}{GPA equivalent}: 3.9/4.0)\\
+First-class honours\\
 Dissertation: \textit{\href{http://www.chasestevens.com/papers/undergrad_dissertation.pdf}{Understanding Referential Coordination as a Particle Swarm Optimization Task}}
 
 \section{SKILLS}
